# slack-cli

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
openspec/: CLAUDE.md  project.md
src/slack_cli/: CLAUDE.md  __init__.py  client.py  formatters.py  main.py
src/slack_cli/commands/: CLAUDE.md  __init__.py  channel.py  dm.py  search.py  send.py
